--- a/Project-Rural-Development/Rural Development/mainpage.css
+++ b/Project-Rural-Development/Rural Development/mainpage.css
@@ -197,7 +197,8 @@
           /* background: #000000; */
          /* min-height: fit-content; */
         background-image: url(hbck.jpg);
-        height: 300px;
+        height: 350px;
+        box-shadow: #786e71 2px 0px 12px 12px;
         }
 
   
@@ -210,11 +211,17 @@
           text-decoration: none;
           border-bottom: 2px solid ;
           font-size: 50px;
+          padding: 10px 0px 10px 0px;
+        }
+        .content{
+          margin-top: 40px;
+         
         }
 
         .pict1{
          display: flex;
          align-items: center;
+         cursor: pointer;
         }
 
         .menu ul li {
