--- a/Project-Rural-Development/Rural Development/mainpage.css
+++ b/Project-Rural-Development/Rural Development/mainpage.css
@@ -197,7 +197,7 @@
           /* background: #000000; */
          /* min-height: fit-content; */
         background-image: url(hbck.jpg);
-        height: 350px;
+        height: 550px;
         box-shadow: #786e71 2px 0px 12px 12px;
         }
 
@@ -214,14 +214,62 @@
           padding: 10px 0px 10px 0px;
         }
         .content{
-          margin-top: 40px;
+          margin: 0px 0px 0px 160px;
+          display:flex;
+          align-items:center;
+          gap:30px;
+       
          
+        }
+
+        .content12 img{
+          width:280px;
+          height:150px;
+          border:1px solid rgb(8, 0, 0);
+          z-index:12;
+          border-radius:19px;
+          align-items: center;
+        }
+
+        .content12{
+          margin: 0px 0px 0px 430px;
+          display:flex;
+          align-items:center;
+          gap:30px;
+        }
+
+        
+        .content img{
+          width:280px;
+          height:150px;
+          border:1px solid rgb(8, 0, 0);
+          z-index:12;
+          border-radius:19px;
+          align-items: center;
         }
 
         .pict1{
          display: flex;
          align-items: center;
          cursor: pointer;
+         margin: 20px;
+        }
+        #pict1{
+          margin-left: 90px;
+        }
+
+        .doc1{
+          color: rgb(255, 255, 255);
+          z-index: 13;
+          align-items: last baseline;
+        }
+
+        .doc1:hover{
+          color: aliceblue;
+          z-index: 13;
+          -ms-transform: scale(1); /* IE 9 */
+          -webkit-transform: scale(1); 
+          transform: scale(1.2); 
         }
 
         .menu ul li {
@@ -238,6 +286,177 @@
             color: white;
             text-decoration: none;
         }
+        .slideshow-container {
+          max-width: 1550px;
+          width:1450px;
+          height:150px;
+          /* position: relative; */
+          margin: 10px 0px 0px 0px;
+        }
+        
+        /* Caption text */
+        .text {
+          color: #f2f2f2;
+          font-size: 15px;
+          padding: 8px 12px;
+          position: absolute;
+          bottom: 8px;
+          width: 100%;
+          text-align: center;
+        }
+        
+        /* Number text (1/3 etc) */
+        .numbertext {
+          color: #f2f2f2;
+          font-size: 12px;
+          padding: 8px 12px;
+          /* position: absolute; */
+          /* top: 0; */
+        }
+        
+        /* The dots/bullets/indicators */
+        .dot {
+          height: 15px;
+          width: 15px;
+          position: relative;
+          margin: 0px 2px;
+          background-color: #f19797;
+          border-radius: 50%;
+          display:flexbox;
+          transition: background-color 0.6s ease;
+          justify-content: space-between;
+        }
+        
+        .active {
+          background-color: #717171;
+        }
+        
+        /* Fading animation */
+        .fade {
+          animation-name: fade;
+          animation-duration: 0.5s;
+        }
+        
+        @keyframes fade {
+          from {opacity: .4} 
+          to {opacity: 1}
+        }
+        
+        /* On smaller screens, decrease text size */
+        @media only screen and (max-width: 300px) {
+          .text {font-size: 11px}
+        }
+ 
+        .option{
+         margin-top: 300px;
+        }
+ 
+        .gallery{
+         margin-top:10px;
+         height: 300px;
+         background:#d21054;
+         box-shadow: #8f035c 2px 0px 43px 3px;
+         
+        }
+ 
+        .media-gallery h1{
+        color: rgb(214, 212, 195);
+        text-align: center;
+       text-decoration: underline rgb(214, 212, 195) ;
+        padding-top: 10px;
+        }
+ 
+        .photo h4{
+         font-size: 32px;
+         color: rgb(214, 212, 195);
+        text-align:start;
+        margin: 0px 0px 0px 33px;
+        text-decoration:underline dotted;
+        padding-top: 10px;
+        }
+ 
+        .gallery img {
+         display:flex;
+         align-items: center;
+         height:100px;
+         width:100px;
+         margin:0px 0px 0px 63px;
+        }
+ 
+        .view1{
+         background: #fbc42e;
+         align-items: center;
+         padding: 2px 12px 2px 2px;
+         border: solid 1px #998502;
+         box-shadow: #f6a859 0px 2px 2px 3px ;
+         margin-top: 10px;
+         
+        }
+ 
+        .view1:hover{
+         background: #f4b60b;
+         padding: 2px 12px 2px 2px;
+         color: #050505;
+         align-items: center;
+         cursor: pointer;
+        }
+ 
+        .view11{
+         background: #fbc42e;
+         align-items: center;
+         padding: 2px 12px 2px 2px;
+         border: solid 1px #998502;
+         box-shadow: #f6a859 0px 2px 2px 3px ;
+         margin: 10px 0px 0px 40px;
+        }
+ 
+        .view11:hover{
+         background: #f4b60b;
+         padding: 2px 12px 2px 2px;
+         color: #050505;
+         align-items: center;
+         cursor: pointer;
+        }
+ 
+ 
+        .container31{
+         display: flex;
+         margin-top: 20px;
+         margin-left: 100px;
+        }
+ 
+        .container3, .gallery1{
+         width:1400px;
+         align-items: center;
+ 
+        }
+ 
+        .gallery{
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+        }
+ 
+        .department{
+         background: #0b53b9;
+         box-shadow: yellow 2px 0px 244px 134px;
+         padding-left: 10px;
+        }
+        .department1{
+         font-size: 50px;
+         color:yellow;
+         padding-top: 20px;
+         text-align: center;
+        }
+        .administration{
+         font-size: 30px;
+         color:yellow;
+         text-decoration: underline;
+         margin-left: 10px;
+       }
+       object{
+         font-size: 20px;
+       }
         
 @keyframes binaryAnimation {
     0% { transform: translateY(0); opacity:0.5; }
