--- a/Project-Rural-Development/Rural Development/Road.css
+++ b/Project-Rural-Development/Rural Development/Road.css
@@ -14,9 +14,9 @@
     margin:0px 0px 0px 100px;
 }
 
-.element{
+.element ul li{
     display: flex;
-    margin-left: 300px;
+    margin-left: 100px;
     color:rgb(246, 167, 71);
     
 }
@@ -25,14 +25,17 @@
 .element, ul ,li a{
     display: flex;
     color:rgb(9, 8, 7);
-    gap:40px;
+    gap:4px;
     text-decoration: none;
 }
 
-.element:hover ul:hover ,li:hover a:hover{
+.element ul a:hover{
     display: flex;
-    color:rgb(119, 99, 79);
-    gap:40px;
+    color:rgb(30, 7, 133);
+    gap:4px;
+    -ms-transform: scale(1); /* IE 9 */
+     -webkit-transform: scale(1); 
+     transform: scale(1.1); 
 }
 
 .prov{
@@ -89,39 +92,60 @@ button{
 
 
 footer{
-    background: #3e00fa94;
-    margin-top: 10px;
-}
-
-.footer-content{
-    display: flex;
-    /* align-items: center; */
-    margin: 05px 0px 05px 600px;
-}
-
-.contact ,h22 {
+    background: #8383b1;
+    margin-top: 200px;
+    border-top: #8383b1 2px solid ;
+  }
+  
+  .container1,.footer-content{
+    margin: 05px 0px 5px 0px;
+    background: #8383b1;
+    align-items: center;
+    padding:0px 0px 20px 0px;
+    margin: 0px 0px -20px 300px ;
+  }
+  
+  .contact ,h222 {
     display: flex;
     font-size: 30px;
-    text-decoration: dotted white;
-    margin-left: 600px;
-
-}
-
-.help {
+    text-decoration: dotted rgb(246, 245, 245);
+    margin: 10px 0px 0px 30px;
+  }
+  
+  .help{
     display: flex;
-    text-decoration: dotted white;
-    margin-left: 600px;
+    margin-left: 30px;
+    gap: 10px;
+  }
+  
+  .help1{
+    display: flex;
+    margin-left: 30px;
+    height: 60px;
+    gap: 10px;
     
-}
-
-.img11{
+  }
+  
+  .help2{
+    display: flex;
+    margin-left: 30px;
+    height: 30px;
+    gap: 10px;
+    
+  }
+  
+  .img111{
     width: 20px;
     height: 20px;
-}
-
-.img12{
+    padding: 15px 4px 0px 3px ;
+  }
+  
+  .img112{
     width: 20px;
     height: 20px;
-    padding: 2px 4px 4px 3px ;
-}
+    padding: 15px 4px 0px 3px ;
+  }
+  .help ,.phone1{
+    padding: 0px 4px 0px 3px ;
+  }
 
