--- a/Project-Rural-Development/Rural Development/mainpage.css
+++ b/Project-Rural-Development/Rural Development/mainpage.css
@@ -563,15 +563,6 @@ p {
   .my-custom-class {
     font-size: 22px; /* You can change the value to your desired font size */
   }
-  .footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: gray;
-    color: white;
-    font-size: 14px;
-    padding: 10px;
-  }
    
   .btn {
     color: rgb(244, 239, 239);
@@ -617,23 +608,7 @@ button img {
      -webkit-transform: scale(1); 
      transform: scale(1.1); 
  }
- 
 
-  
-  /* .btn:hover {
-    background-color: #d3c2c3;
-    box-shadow: #d9e38b 0px 0px 0px 0px, rgb(180, 180, 197) 0px 3px 4px 0px;
-  }  */
-  
-  /* .btn-rounded {
-    padding: 10px 20px;
-    font-size: 1.2rem;
-  } */
-  
-  /* .btn-lg {
-    font-size: 2rem;
-    padding: 20px 60px;
-  } */
   body{
     background-color:rgb(250, 250, 251); 
     background-size: cover;
@@ -641,40 +616,82 @@ button img {
     background-repeat: no-repeat;
 }
 
-
 footer{
-  background: #3e00fa94;
-  margin-top: 10px;
+  background: #efeff1;
+  margin-top: 30px;
+  border-top: #cdcaca 2px solid ;
 }
 
 .container1,.footer-content{
-  /* display: flex; */
-  /* align-items: center; */
   margin: 05px 0px 5px 0px;
+  background: #efeff1;
+  align-items: center;
+  margin: 0px 0px 20px 250px ;
 }
 
 .contact ,h222 {
   display: flex;
   font-size: 30px;
-  text-decoration: dotted white;
-  margin-left: -500px;
-
+  text-decoration: dotted rgb(246, 245, 245);
+  margin-left: 30px;
+  background: #efeff1;
 }
 
-.help {
+.help{
   display: flex;
-  text-decoration: dotted white;
-  margin-left: -500px;
+  margin-left: 30px;
+  background: #efeff1;
+  gap: 10px;
+}
+
+.help1{
+  display: flex;
+  margin-left: 30px;
+  background: #efeff1;
+  height: 60px;
+  gap: 10px;
+  
+}
+
+.help2{
+  display: flex;
+  margin-left: 30px;
+  background: #efeff1;
+  height: 30px;
+  gap: 10px;
   
 }
 
 .img111{
   width: 20px;
-  height: 20px;
+  height: 30px;
+  padding: 15px 4px 0px 3px ;
 }
 
 .img112{
   width: 20px;
-  height: 20px;
-  padding: 2px 4px 4px 3px ;
+  height: 30px;
+  padding: 15px 4px 0px 3px ;
+}
+.help ,.phone1{
+  padding: 0px 4px 0px 3px ;
+}
+.container p{
+    margin: 0px 0px 0px 20px ;
+}
+
+.container h2{
+    margin: 0px 0px 10px 20px ;
+}
+
+.gmail1{
+  padding:10px;
+}
+
+.phone1{
+  padding:10px;
+}
+
+.location1{
+  padding:10px;
 }
